--- a/src/static/Navbar.css
+++ b/src/static/Navbar.css
@@ -19,27 +19,56 @@ body {
 
 .navbar {
   height: 60px;
-  background-color: #fef7e5;
+  background-color: #71ff88;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
 }
 
-.logo {
+.logo h2 {
+  margin: 0;
+  color: #333;
+  font-size: 22px;
+  font-weight: 600;
 }
 
 .menu-icon {
   display: none;
+  flex-direction: column;
+  cursor: pointer;
 }
 
-.nav-elements {
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: #333;
+  margin: 5px 0;
+  transition: all 0.3s ease-in-out;
+}
+
+.open:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.open:nth-child(2) {
+  opacity: 0;
+}
+
+.open:nth-child(3) {
+  transform: rotate(-45deg) translate(5px, -5px);
 }
 
 .nav-elements ul {
   display: flex;
   justify-content: space-between;
   list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
-.nav-elements ul li:not(:last-child) {
+.nav-elements ul li {
   margin-right: 60px;
 }
 
@@ -51,7 +80,7 @@ body {
 }
 
 .nav-elements ul a.active {
-  color: #574c4c;
+  color: #f6ffa5;
   font-weight: 500;
   position: relative;
 }
@@ -63,43 +92,46 @@ body {
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: #574c4c;
+  background-color: #ffffff;
 }
 
+/* Responsive Design */
 @media (max-width: 768px) {
-  .nav-elements ul li:not(:last-child) {
-    margin-right: 30px;
-  }
-}
-
-@media (max-width: 600px) {
   .menu-icon {
-    display: block;
-    cursor: pointer;
+    display: flex;
   }
 
   .nav-elements {
     position: absolute;
     right: 0;
     top: 60px;
-    background-color: #fef7e5;
-    width: 0px;
+    background-color: #333;
+    width: 0;
     height: calc(100vh - 60px);
-    transition: all 0.3s ease-in;
+    transition: all 0.3s ease-in-out;
     overflow: hidden;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .nav-elements.active {
-    width: 270px;
+    width: 250px;
+    padding: 20px;
   }
 
   .nav-elements ul {
-    display: flex;
     flex-direction: column;
+    width: 100%;
   }
 
   .nav-elements ul li {
-    margin-right: unset;
-    margin-top: 22px;
+    margin: 15px 0;
+  }
+
+  .nav-elements ul a {
+    color: white;
+    font-size: 18px;
   }
 }
