--- a/src/static/Home.css
+++ b/src/static/Home.css
@@ -83,8 +83,11 @@ img {
   }
   
   .history-card {
+    display: flex;
     background: #ffffff;
     border: 1px solid #e0e0e0;
+    flex-direction: column;
+    align-items: center;
     padding: 15px 20px;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
